scripts/nullness/original/url41e0dd6de9_jakaldama_pipeline_simulator_tgz-pJ8-PipelineSimulatorJ8.txt
../original/url41e0dd6de9_jakaldama_pipeline_simulator_tgz-pJ8-PipelineSimulatorJ8/src/PipelineSimulator.java:5: error: [initialization.static.field.uninitialized] static field instructionCache not initialized
	private static int instructionCache[];
	                   ^
../original/url41e0dd6de9_jakaldama_pipeline_simulator_tgz-pJ8-PipelineSimulatorJ8/src/PipelineSimulator.java:7: error: [initialization.static.field.uninitialized] static field mainMemory not initialized
	private static int mainMemory[];
	                   ^
../original/url41e0dd6de9_jakaldama_pipeline_simulator_tgz-pJ8-PipelineSimulatorJ8/src/PipelineSimulator.java:9: error: [initialization.static.field.uninitialized] static field regs not initialized
	private static int regs[];
	                   ^
3 errors
